# src/main/java/com/github/valentinkarnaukhov/stubgenerator/resolver/ModelResolver.java
@@ -1,5 +1,6 @@
 package com.github.valentinkarnaukhov.stubgenerator.resolver;
 
+import com.github.valentinkarnaukhov.stubgenerator.model.Field;
 import com.github.valentinkarnaukhov.stubgenerator.model.FieldTemplate;
 import com.github.valentinkarnaukhov.stubgenerator.model.ObjectTemplate;
 import io.swagger.codegen.v3.CodegenModel;
@@ -18,14 +19,19 @@ public class ModelResolver {
 
     private final Map<String, CodegenModel> allModels;
     private List<FieldTemplate> fieldTemplates;
-    @Getter private final Set<ObjectTemplate> collections = new HashSet<>();
+    private ResolverConf conf;
+    private int maxDepth = 5;
+    @Getter
+    private final Set<Field> collections = new HashSet<>();
 
-    public ModelResolver(Map<String, CodegenModel> allModels) {
+    public ModelResolver(Map<String, CodegenModel> allModels, ResolverConf conf) {
         this.allModels = allModels;
+        this.conf = conf;
     }
 
-    public List<FieldTemplate> resolveFlatten(CodegenModel codegenModel, int maxDepth, ResolverConf conf) {
-        Node node = getNode(codegenModel, null, null, 0, maxDepth);
+    public List<FieldTemplate> resolveFlatten(CodegenModel codegenModel, ResolverConf conf) {
+        Node node = modelToNode(codegenModel, null, null, 0);
+        Field field = nodeToField(node);
         return toFields(node, conf);
     }
 
@@ -37,11 +43,12 @@ public class ModelResolver {
                         .fieldName(camelize(parameter.getParamName()))
                         .methodFieldName(parameter.getParamName())
                         .fieldType(parameter.getDataType())
+                        .baseType(parameter.getBaseType())
                         .build();
                 fields.add(param);
             } else {
                 CodegenModel model = this.allModels.get(parameter.baseType);
-                List<FieldTemplate> fieldTemplates = resolveFlatten(model, maxDepth, conf);
+                List<FieldTemplate> fieldTemplates = resolveFlatten(model, conf);
                 fields.addAll(fieldTemplates);
             }
         }
@@ -50,48 +57,129 @@ public class ModelResolver {
 
     private List<FieldTemplate> toFields(Node node, ResolverConf conf) {
         this.fieldTemplates = new ArrayList<>();
-        nodeToField(node, conf);
+        nodeToField(node);
         return fieldTemplates;
     }
 
-    private void nodeToField(Node node, ResolverConf conf) {
-        for (CodegenProperty property : node.getProperties()) {
-            FieldTemplate fieldTemplate = conf.getPropertyToFields().apply(property, node);
-            fieldTemplates.add(fieldTemplate);
-        }
-        if (node.getModels() != null) {
-            node.getModels().forEach(v -> nodeToField(v, conf));
-        }
+    private Field nodeToField(Node node) {
+        Field field = new Field();
+//        field.getFields().addAll(node.getProperties().stream().map(this::propertyToField).collect(Collectors.toList()));
+//        field.getFields().addAll(node.getModels().stream().map(this::nodeToField).collect(Collectors.toList()));
+        return null;
     }
 
-    private Node getNode(CodegenModel codegenModel, Node parent, CodegenProperty source, int depth, int maxDepth) {
-        Node node = new Node();
-        node.setProperties(getProperties(codegenModel.getAllVars()));
-        node.setDepth(depth);
-
-        if (parent != null) {
-            node.getWayToObject().addAll(parent.getWayToObject());
-        }
-        if (source != null) {
-            node.getWayToObject().add(source);
-        }
-
-        int newDepth = depth + 1;
-
-        if (depth == maxDepth) {
-            node.setModels(null);
-            node.setProperties(codegenModel.getAllVars());
+    private ObjectTemplate parameterToObject(CodegenParameter parameter) {
+        ObjectTemplate objectTemplate = new ObjectTemplate();
+        objectTemplate.setName(parameter.getParamName());
+        objectTemplate.setCamelizedName(camelize(parameter.getParamName()));
+        objectTemplate.setPrefix(this.conf.getCompNamePrefix());
+        if (!this.allModels.containsKey(parameter.getDataType()) && !parameter.getIsListContainer()) {
+            //primitive
+            objectTemplate.setPrimitive(true);
+            objectTemplate.setCollection(false);
+            objectTemplate.setType(parameter.getDataType());
         } else {
-            List<Node> nodes = codegenModel.getAllVars().stream()
-                    .filter(prop -> prop.complexType != null)
-                    .map(prop -> getNode(
-                            this.allModels.get(prop.complexType),
-                            node,
-                            prop,
-                            newDepth,
-                            maxDepth))
-                    .collect(Collectors.toList());
-            node.setModels(nodes);
+            if (parameter.getIsListContainer()) {
+                if (!this.allModels.containsKey(parameter.getBaseType())) {
+                    //primitive list
+                    objectTemplate.setPrimitive(true);
+                    objectTemplate.setCollection(true);
+                    objectTemplate.setType(parameter.getItems().getBaseType());
+                } else {
+                    //obj list
+                    objectTemplate.setPrimitive(false);
+                    objectTemplate.setCollection(true);
+                    objectTemplate.setFields(modelToFields(this.allModels.get(parameter.getBaseType())));
+                    objectTemplate.setType(parameter.getItems().getBaseType());
+                }
+            } else {
+                //obj
+                objectTemplate.setPrimitive(false);
+                objectTemplate.setCollection(false);
+                objectTemplate.setFields(modelToFields(this.allModels.get(parameter.getBaseType())));
+                objectTemplate.setType(parameter.getBaseType());
+            }
+        }
+
+        return objectTemplate;
+    }
+
+    private List<Field> modelToFields(CodegenModel model) {
+        Node node = modelToNode(model, null, null, 0);
+        List<Field> fields = new ArrayList<>();
+        parseNode(node, fields);
+        this.collections.addAll(fields.stream().filter(Field::isCollection).collect(Collectors.toList()));
+        return fields;
+    }
+
+    private void parseNode(Node node, List<Field> fields) {
+        for (String key : node.getParameters().keySet()) {
+            Node parameter = node.getParameters().get(key);
+            Field field = new Field();
+            field.setName(key);
+            field.setCompositeName(this.conf.getCompositeNameFunction().apply(parameter));
+            if (parameter.getSourceModel() != null) {
+                field.setPrimitive(false);
+                field.setType(parameter.getSourceModel().getDataType());
+            }
+            if (parameter.getSourceProperty() != null) {
+                if (parameter.getSourceProperty().getIsListContainer()) {
+                    field.setPrimitive(parameter.getSourceProperty().getItems().getIsPrimitiveType());
+                    field.setType(parameter.getSourceProperty().getItems().getBaseType());
+                } else {
+                    field.setPrimitive(parameter.getSourceProperty().getIsPrimitiveType());
+                    field.setType(parameter.getSourceProperty().getBaseType());
+                }
+                field.setCollection(parameter.getSourceProperty().getIsListContainer());
+                field.setSetter(parameter.getSourceProperty().getSetter());
+            }
+            fields.add(field);
+        }
+        node.getModels().values().forEach(v -> parseNode(v, fields));
+    }
+
+    public List<ObjectTemplate> parametersToObject(List<CodegenParameter> parameters) {
+        return parameters.stream().map(this::parameterToObject).collect(Collectors.toList());
+    }
+
+    private Node modelToNode(CodegenModel sourceModel, CodegenProperty sourceProperty, Node parentNode, int depth) {
+        Node node = new Node();
+        node.setDepth(depth);
+        node.setSourceModel(sourceModel);
+        node.setSourceProperty(sourceProperty);
+        if (parentNode != null) {
+            node.getWay().addAll(parentNode.getWay());
+            if (parentNode.getSourceProperty() != null) {
+                node.getWay().add(parentNode.getSourceProperty());
+            }
+        }
+
+        if (sourceModel != null) {
+            Map<String, Node> parameters = sourceModel.getAllVars().stream()
+                    .filter(p -> p.getComplexType() == null || depth == maxDepth)
+                    .collect(Collectors.groupingBy(CodegenProperty::getBaseName, Collectors.mapping(
+                            p -> propertyToNode(p, sourceProperty, node, depth), Collectors.reducing(null, (a, b) -> b))));
+            node.setParameters(parameters);
+            Map<String, Node> models = sourceModel.getAllVars().stream()
+                    .filter(p -> p.getComplexType() != null && depth < maxDepth)
+                    .collect(Collectors.groupingBy(CodegenProperty::getBaseName, Collectors.mapping(
+                            p -> propertyToNode(p, sourceProperty, node, depth), Collectors.reducing(null, (a, b) -> b))));
+            node.setModels(models);
+        }
+
+        return node;
+    }
+
+    private Node propertyToNode(CodegenProperty sourceProperty, CodegenProperty parentProperty, Node parentNode, int depth) {
+        Node node = new Node();
+
+        if (depth + 1 <= maxDepth) {
+            node = modelToNode(this.allModels.get(sourceProperty.getBaseType()), sourceProperty, parentNode, depth + 1);
+        } else {
+            node.setDepth(depth + 1);
+            node.setSourceProperty(sourceProperty);
+            node.getWay().addAll(parentNode.getWay());
+            node.getWay().add(parentProperty);
         }
 
         return node;
@@ -101,17 +189,13 @@ public class ModelResolver {
     @Setter
     @NoArgsConstructor
     public static class Node {
-        private List<Node> models;
-        private List<CodegenProperty> properties;
-        private List<CodegenProperty> wayToObject = new ArrayList<>();
+        private CodegenModel sourceModel;
+        private CodegenProperty sourceProperty;
+        private Map<String, Node> parameters = new HashMap<>();
+        private Map<String, Node> models = new HashMap<>();
+        private List<CodegenProperty> way = new ArrayList<>();
         private int depth;
         private boolean visit;
-    }
-
-    private List<CodegenProperty> getProperties(List<CodegenProperty> properties) {
-        return properties.stream()
-                .filter(v -> v.complexType == null)
-                .collect(Collectors.toList());
     }
 
 }
